# TEMGeminiOntology

./: .pre-commit-config.yaml  README.md  catalog-v001.xml  pyproject.toml  temgo-contributors.ttl  temgo-dependencies.ttl  temgo-doc.ttl  temgo-inferred.ttl  temgo.md  temgo.ttl
.github/: emmocheck_conf.yml
.github/workflows/: cd_ghpages.yml  cd_release.yml  ci_tests.yml
.hooks/: generate-context-and-doc.sh  generate-resources.sh
context/0.1/: keywords.yaml
examples/electron-imaging/: electron-imaging.csv  mkttl.sh
resources/: README.md  prefixes.jsonld  sampleholder.csv
temgo/: __init__.py  temgo.py
temgo/context/: context.json
temgo/context/0.1/: context.json  keywords.yaml
widoco/: index-en.html  ontology.jsonld  ontology.nt  ontology.owl  ontology.ttl  widoco.conf
widoco/OOPSevaluation/: oopsEval.html
widoco/provenance/: provenance-en.html  provenance-en.ttl
widoco/sections/: abstract-en.html  crossref-en.html  description-en.html  overview-en.html
