[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "TEMGeminiOntology"
authors = [
    {name = "SINTEF", email = "jesper.friis@sintef.no"},
]
description = "Ontology for the TEM Gemini Centre."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Plugins",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
keywords = ["TEM", "ontology"]
requires-python = ">=3.9"
dynamic = ["0.0.1"]

dependencies = [
    "tripper[datadoc]",
]

[project.urls]
Home = "https://github.com/TEM-Gemini-Centre/TEMGeminiOntology"
Documentation = "https://github.com/TEM-Gemini-Centre/TEMGeminiOntology"
Source = "https://github.com/TEM-Gemini-Centre/TEMGeminiOntology"
"Issue Tracker" = "https://github.com/TEM-Gemini-Centre/TEMGeminiOntology/issues"
Changelog = "https://github.com/TEM-Gemini-Centre/TEMGeminiOntology/blob/master/CHANGELOG.md"
#Package = "https://pypi.org/project/temgo"


[tool.setuptools.package-data]
"tripper.context" = ["*.json", "*.yaml"]


# Note the quotes around dlite.python_storage_plugins to escape the embedded dot
[project.entry-points."tripper.keywords"]
"context/0.1" = "TEMGemini"
